grafana-loki-stack/manifests/app/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: controller
  name: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
        - env:
            - name: PORT
              value: "80"
          image: controller
          imagePullPolicy: Never
          name: controller
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: controller
  name: controller
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: controller
