grafana-loki-stack/manifests/app/seconds-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seconds
  name: seconds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seconds
  template:
    metadata:
      labels:
        app: seconds
    spec:
      containers:
        - env:
            - name: PORT
              value: "80"
          image: seconds
          imagePullPolicy: Never
          name: seconds
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: seconds
  name: seconds
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: seconds
